--- a/app/src/main/res/layout/nextmove3.xml
+++ b/app/src/main/res/layout/nextmove3.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <Button
+        android:id="@+id/go_back"
+        android:layout_width="179dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#CFF1EE"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Вернуться в начало"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="431dp"
