--- a/app/src/main/res/layout/nextmove4.xml
+++ b/app/src/main/res/layout/nextmove4.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="25dp"
         android:backgroundTint="#CFF1EE"
         android:fontFamily="@font/comfortaa_bold"
-        android:text="Назад"
+        android:text="Вернуться в начало"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="parent"
