--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <Button
+        android:id="@+id/button_registr"
+        android:layout_width="198dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="436dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/comfortaa_bold"
+        android:shadowColor="#230303"
+        android:text="Регистрация"
+        android:textColor="@color/black"
+        android:translationY="80dp"
+        app:cornerRadius="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:rippleColor="#000000" />
+
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="431dp"
@@ -30,22 +47,25 @@
 
     <Button
         android:id="@+id/button_login"
-        android:layout_width="188dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="92dp"
+        android:layout_width="198dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="436dp"
         android:backgroundTint="#35D4A4"
         android:fontFamily="@font/comfortaa_bold"
+        android:shadowColor="#230303"
         android:text="Вход"
+        android:textColor="#FFFFFF"
+        app:cornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_input" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:rippleColor="#000000" />
 
     <EditText
         android:id="@+id/login_input"
         android:layout_width="217dp"
         android:layout_height="46dp"
-        android:layout_marginTop="256dp"
+        android:layout_marginTop="272dp"
         android:background="#F1EAEA"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
