--- a/app/src/main/res/layout/createaccount.xml
+++ b/app/src/main/res/layout/createaccount.xml
@@ -29,16 +29,20 @@
 
     <Button
         android:id="@+id/button_login"
-        android:layout_width="188dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="428dp"
+        android:layout_width="198dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="468dp"
         android:backgroundTint="#35D4A4"
         android:fontFamily="@font/comfortaa_bold"
+        android:shadowColor="#230303"
         android:text="Вход"
+        android:textColor="#FFFFFF"
+        app:cornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:rippleColor="#000000" />
 
     <EditText
         android:id="@+id/login_input"
@@ -55,6 +59,7 @@
         android:textColorHighlight="#35D4A4"
         android:textColorHint="#000000"
         android:textColorLink="#35D4A4"
+        android:textSize="16dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -76,6 +81,7 @@
         android:textColorHighlight="#35D4A4"
         android:textColorHint="#000000"
         android:textColorLink="#35D4A4"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,6 +102,7 @@
         android:textColorHighlight="#35D4A4"
         android:textColorHint="#000000"
         android:textColorLink="#35D4A4"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
