--- a/app/src/main/res/layout/nextmove2.xml
+++ b/app/src/main/res/layout/nextmove2.xml
@@ -10,24 +10,13 @@
         android:id="@+id/go_back"
         android:layout_width="179dp"
         android:layout_height="61dp"
-        android:layout_marginBottom="25dp"
         android:backgroundTint="#CFF1EE"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Вернуться в начало"
         android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="431dp"
-        android:layout_height="737dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/victorys_main" />
+        tools:layout_editor_absoluteY="648dp" />
 
     <ImageView
         android:id="@+id/imageView8"
