--- a/app/src/main/res/layout/your_login.xml
+++ b/app/src/main/res/layout/your_login.xml
@@ -6,10 +6,23 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <Button
+        android:id="@+id/go_back"
+        android:layout_width="179dp"
+        android:layout_height="61dp"
+        android:backgroundTint="#35D4AD"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Выйти из аккаунта"
+        android:textColor="#000000"
+        android:translationY="-50dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ScrollView
         android:layout_width="343dp"
         android:layout_height="300dp"
-        android:layout_marginTop="430dp"
+        android:layout_marginTop="320dp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -174,40 +187,23 @@
         android:id="@+id/imageView4"
         android:layout_width="262dp"
         android:layout_height="76dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView7"
         app:srcCompat="@drawable/victorys_emblem" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="350dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="128dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:gravity="center"
-        android:text="Имя пользователя:"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
-
-    <TextView
         android:id="@+id/textView7"
         android:layout_width="356dp"
         android:layout_height="91dp"
-        android:layout_marginTop="272dp"
+        android:layout_marginTop="152dp"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
         android:text="Последние результаты:"
         android:textColor="#FEB340"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
@@ -215,15 +211,15 @@
         android:id="@+id/textView_your"
         android:layout_width="350dp"
         android:layout_height="68dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="120dp"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
         android:text="Ваш логин"
         android:textColor="#35D4A4"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.442"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
