--- a/app/src/main/res/layout/createaccount.xml
+++ b/app/src/main/res/layout/createaccount.xml
@@ -48,7 +48,7 @@
         android:id="@+id/login_input"
         android:layout_width="217dp"
         android:layout_height="46dp"
-        android:layout_marginTop="252dp"
+        android:layout_marginTop="220dp"
         android:background="#F1EAEA"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
@@ -64,13 +64,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="217dp"
         android:layout_height="46dp"
-        android:layout_marginTop="368dp"
+        android:layout_marginTop="356dp"
         android:background="#F1EAEA"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
@@ -91,7 +92,7 @@
         android:id="@+id/editTextTextPassword2"
         android:layout_width="217dp"
         android:layout_height="46dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="304dp"
         android:background="#F1EAEA"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
@@ -106,7 +107,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView1"
@@ -117,7 +118,7 @@
         android:gravity="center"
         android:text="Создание аккаунта"
         android:textColor="#000000"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
