--- a/app/src/main/res/layout/nextmove1.xml
+++ b/app/src/main/res/layout/nextmove1.xml
@@ -42,8 +42,8 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="440dp"
-        android:layout_marginTop="200dp"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,11 +154,6 @@
                 android:textColor="#35D4A4"
                 android:textSize="32sp" />
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
         </LinearLayout>
     </ScrollView>
 
