--- a/app/src/main/res/layout/nextmove4.xml
+++ b/app/src/main/res/layout/nextmove4.xml
@@ -42,8 +42,8 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="440dp"
-        android:layout_marginTop="200dp"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
