--- a/app/src/main/res/layout/all_types.xml
+++ b/app/src/main/res/layout/all_types.xml
@@ -8,16 +8,17 @@
 
     <Button
         android:id="@+id/go_back"
-        android:layout_width="179dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="25dp"
+        android:layout_width="148dp"
+        android:layout_height="62dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#CFF1EE"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Вернуться в начало"
         android:textColor="#000000"
+        app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -33,9 +34,9 @@
         android:id="@+id/imageView9"
         android:layout_width="206dp"
         android:layout_height="58dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/victorys_emblem" />
@@ -44,22 +45,21 @@
         android:id="@+id/button_alltypes"
         android:layout_width="148dp"
         android:layout_height="62dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#35D4A4"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Личный кабинет"
         android:textColor="#FFFFFF"
         app:cornerRadius="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.904"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintEnd_toStartOf="@+id/go_back"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ScrollView
         android:layout_width="330dp"
-        android:layout_height="390dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="-10dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="120dp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +69,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/frame2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView10"
+                        android:layout_width="153dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/russia" />
+
+                    <Button
+                        android:id="@+id/buttonVict2"
+                        android:layout_width="157dp"
+                        android:layout_height="73dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="15dp"
+                        android:backgroundTint="#CFF1EE"
+                        android:text="Познавай Россию!"
+                        android:textColor="#35D4A4" />
+
+                </LinearLayout>
+
+            </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/frame3"
@@ -163,69 +195,7 @@
 
             </FrameLayout>
 
-            <FrameLayout
-                android:id="@+id/frame2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="20dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView14"
-                        android:layout_width="153dp"
-                        android:layout_height="100dp"
-                        app:srcCompat="@drawable/numb" />
-
-                    <Button
-                        android:id="@+id/buttonVict2"
-                        android:layout_width="157dp"
-                        android:layout_height="73dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="15dp"
-                        android:backgroundTint="#CFF1EE"
-                        android:text="Великие года"
-                        android:textColor="#35D4A4" />
-
-                </LinearLayout>
-
-            </FrameLayout>
-
         </LinearLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/searchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="100.0"
-        android:backgroundTint="#35D4A4"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Найти"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/search"
-        app:layout_constraintTop_toTopOf="@+id/search" />
-
-    <EditText
-        android:id="@+id/search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="144dp"
-        android:layout_weight="100.0"
-        android:backgroundTint="#000000"
-        android:ems="10"
-        android:fontFamily="@font/comfortaa_bold"
-        android:hint="Введите текст"
-        android:inputType="textPersonName"
-        android:textColor="#000000"
-        android:textColorHighlight="#35D4A4"
-        android:textColorHint="#000000"
-        android:textColorLink="#35D4A4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
