--- a/app/src/main/res/layout/createaccount.xml
+++ b/app/src/main/res/layout/createaccount.xml
@@ -31,7 +31,7 @@
         android:id="@+id/button_login"
         android:layout_width="198dp"
         android:layout_height="57dp"
-        android:layout_marginTop="468dp"
+        android:layout_marginTop="48dp"
         android:backgroundTint="#35D4A4"
         android:fontFamily="@font/comfortaa_bold"
         android:shadowColor="#230303"
@@ -41,14 +41,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         app:rippleColor="#000000" />
 
     <EditText
         android:id="@+id/login_input"
         android:layout_width="217dp"
         android:layout_height="46dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="232dp"
         android:background="#F1EAEA"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
@@ -60,18 +60,15 @@
         android:textColorHint="#000000"
         android:textColorLink="#35D4A4"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="217dp"
         android:layout_height="46dp"
-        android:layout_marginTop="356dp"
+        android:layout_marginTop="12dp"
         android:background="#F1EAEA"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
@@ -84,15 +81,15 @@
         android:textColorLink="#35D4A4"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintHorizontal_bias="0.548"
+        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
 
     <EditText
         android:id="@+id/editTextTextPassword2"
         android:layout_width="217dp"
         android:layout_height="46dp"
-        android:layout_marginTop="304dp"
+        android:layout_marginTop="340dp"
         android:background="#F1EAEA"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
@@ -105,7 +102,6 @@
         android:textColorLink="#35D4A4"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -113,14 +109,14 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="88dp"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
         android:text="Создание аккаунта"
         android:textColor="#000000"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
