--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -124,13 +124,15 @@
         android:id="@+id/button_next"
         android:layout_width="179dp"
         android:layout_height="61dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="96dp"
         android:backgroundTint="#CFF1EE"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Дальше"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Category" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
