--- a/app/src/main/res/layout/your_login.xml
+++ b/app/src/main/res/layout/your_login.xml
@@ -8,40 +8,70 @@
 
     <Button
         android:id="@+id/go_back"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
+        android:layout_width="204dp"
+        android:layout_height="74dp"
         android:backgroundTint="#35D4AD"
         android:fontFamily="@font/comfortaa_bold"
-        android:text="Выйти из аккаунта"
+        android:text="Log out"
         android:textColor="#000000"
-        android:textSize="11sp"
-        android:translationX="100dp"
-        android:translationY="-50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        android:textSize="20dp"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.536"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.957" />
 
-    <Button
-        android:id="@+id/go_back2"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="25dp"
-        android:backgroundTint="#CFF1EE"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Вернуться назад"
-        android:textColor="#000000"
-        android:textSize="11sp"
-        android:translationX="-100dp"
-        android:translationY="-25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="match_parent"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="400dp"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="match_parent"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="400dp"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+        </LinearLayout>
+    </LinearLayout>
 
     <ScrollView
-        android:layout_width="343dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="350dp"
+        android:layout_width="344dp"
+        android:layout_height="389dp"
+        android:layout_marginTop="150dp"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,12 +97,11 @@
                         android:id="@+id/imageView10"
                         android:layout_width="153dp"
                         android:layout_height="100dp"
-                        android:layout_weight="1"
                         app:srcCompat="@drawable/russia" />
 
                     <TextView
                         android:id="@+id/Scores4"
-                        android:layout_width="194dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/comfortaa_bold"
                         android:gravity="center"
@@ -106,7 +135,7 @@
 
                     <TextView
                         android:id="@+id/Scores1"
-                        android:layout_width="194dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/comfortaa_bold"
                         android:gravity="center"
@@ -133,14 +162,14 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView11"
+                        android:id="@+id/imageView3"
                         android:layout_width="153dp"
                         android:layout_height="100dp"
-                        app:srcCompat="@drawable/english" />
+                        app:srcCompat="@drawable/english_vict" />
 
                     <TextView
                         android:id="@+id/Scores2"
-                        android:layout_width="194dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/comfortaa_bold"
                         android:gravity="center"
@@ -174,7 +203,7 @@
 
                     <TextView
                         android:id="@+id/Scores3"
-                        android:layout_width="194dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/comfortaa_bold"
                         android:gravity="center"
@@ -192,55 +221,59 @@
         </LinearLayout>
     </ScrollView>
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="431dp"
-        android:layout_height="737dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/victorys_main" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="262dp"
-        android:layout_height="76dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7"
-        app:srcCompat="@drawable/victorys_emblem" />
-
     <TextView
         android:id="@+id/textView7"
         android:layout_width="356dp"
         android:layout_height="91dp"
-        android:layout_marginTop="176dp"
+        android:layout_marginTop="188dp"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
         android:text="Последние результаты:"
         android:textColor="#FEB340"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.618"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_your"
         android:layout_width="350dp"
         android:layout_height="68dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="112dp"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
         android:text="Ваш логин"
         android:textColor="#35D4A4"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/image_back6"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="32dp"
+        android:layout_weight="1"
+        android:background="@drawable/roundcorner"
+        android:backgroundTint="#FEB340"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/return_final" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="242dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/victorys_emblem" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
