--- a/app/src/main/res/layout/your_name.xml
+++ b/app/src/main/res/layout/your_name.xml
@@ -7,20 +7,63 @@
     android:background="@color/white">
 
     <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="431dp"
-        android:layout_height="737dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageView11"
+        android:layout_width="242dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/victorys_main" />
+        app:srcCompat="@drawable/victorys_emblem" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="match_parent"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="400dp"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="match_parent"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="400dp"
+                android:layout_height="725dp"
+                app:srcCompat="@drawable/victorys_main" />
+        </LinearLayout>
+    </LinearLayout>
 
     <EditText
         android:id="@+id/NamePerson"
         android:layout_width="259dp"
         android:layout_height="65dp"
-        android:layout_marginTop="292dp"
         android:backgroundTint="#000000"
         android:ems="10"
         android:fontFamily="@font/comfortaa_bold"
@@ -31,15 +74,17 @@
         android:textColorHint="#000000"
         android:textColorLink="#35D4A4"
         android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.879" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="262dp"
         android:layout_height="65dp"
-        android:layout_marginTop="420dp"
+        android:layout_marginTop="480dp"
         android:backgroundTint="#35D4A4"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Играть!"
@@ -67,14 +112,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+    <ImageButton
+        android:id="@+id/image_back3"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="32dp"
+        android:layout_weight="1"
+        android:background="@drawable/roundcorner"
+        android:backgroundTint="#FEB340"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/victorys_emblem" />
+        app:srcCompat="@drawable/return_final" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
