--- a/app/src/main/res/layout/your_login.xml
+++ b/app/src/main/res/layout/your_login.xml
@@ -67,9 +67,11 @@
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="344dp"
         android:layout_height="389dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="100dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -225,21 +227,22 @@
         android:id="@+id/textView7"
         android:layout_width="356dp"
         android:layout_height="91dp"
-        android:layout_marginTop="188dp"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
-        android:text="Последние результаты:"
+        android:text="Результаты:"
         android:textColor="#FEB340"
         android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.618"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.212" />
 
     <TextView
         android:id="@+id/textView_your"
-        android:layout_width="350dp"
-        android:layout_height="68dp"
+        android:layout_width="352dp"
+        android:layout_height="47dp"
         android:layout_marginTop="112dp"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
